# prediction_diabetes

./: .gitignore  Makefile  README.md  pyproject.toml
artifacts/: logistic_diabetes.pkl  metrics_2026-03-18.json  model.pkl
artifacts/models/: model_2026-03-18.pkl
data/processed/: features_diabetes.csv  test.csv  train.csv
docs/: research_log.md
docs/adr/: 000_decisions.md  001_models.md
models/: logistic_diabetes.pkl
notebooks/eda/: 01_eda_inicial.ipynb  02_eda_inicial_triage.ipynb  02_eda_initial.ipynb
notebooks/experiments/: model_v1_logistic.ipynb  model_v2_logistic.ipynb  model_v2_logistic_old.ipynb  model_v3_xgboost.ipynb  regression_diabetes.ipynb
notebooks/sandbox/: logistic_diabetes.ipynb  model_v1_logistic_clinical_dataset.ipynb  regression_diabetes_base_line.ipynb
src/prediction_diabetes/: config.py
src/prediction_diabetes/api/: main.py  schemas.py
src/prediction_diabetes/data/: make_dataset.py
src/prediction_diabetes/inference/: predictor.py
src/prediction_diabetes/models/: evaluate.py  model_pipeline.py  predictor.py  train.py
src/prediction_diabetes/scripts/: train.py
